# seap_mail_notifier

./: Cargo.toml  Secrets.toml
src/: advertisment.rs  app.rs  lib.rs  mailer.rs  scraper.rs  subscription.rs  subscription_api.rs
