[package]
name = "seap-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
shuttle-service = "0.10.0"
shuttle-secrets = "0.10.0"
anyhow = "1.0.69"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["full"] }
reqwest = { version = "0.11.12", fetures = ["json"] }
time = { version = "0.3.15", features = [
    "macros",
    "serde",
    "serde-well-known",
] }
lettre = "0.10.1"
truncrate = "0.1.3"
